# ChangeLog for net-im/gossip
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.11 2004/02/29 19:28:53 weeve Exp $

  29 Feb 2004; Jason Wever <weeve@gentoo.org> gossip-0.7.2.ebuild:
  It's been a hard day's night, and I've been ~sparc'in like a dog.

*gossip-0.7.2 (11 Feb 2004)

  11 Feb 2004; foser <foser@gentoo.org> gossip-0.7.2.ebuild :
  New release (#41199)
  Fix intltool dep cause of parser issues
  Disable experimental dbus interface by default

*gossip-0.7.1-r1 (06 Feb 2004)

  06 Feb 2004; <spider@gentoo.org> gossip-0.7.1-r1.ebuild:
  revisionbump with a hard dep on the new loudmouth, so things dont break if
  somone updates loudmouth + gnutls (you have to rebuild gossip in that case)

*gossip-0.7.1 (03 Feb 2004)

  03 Feb 2004; <spider@gentoo.org> gossip-0.7.1.ebuild:
  Versionbump

*gossip-0.7 (22 Jan 2004)

  22 Jan 2004; <spider@gentoo.org> gossip-0.7.ebuild:
  Homepage update, remove now unnecessary intltool fixes + patch.

  30 Dec 2003; foser <foser@gentoo.org> metadata.xml :
  remove spider as maintainer, covered by gnome herd

*gossip-0.6-r1 (07 Dec 2003)

  07 Dec 2003; <spider@gentoo.org> gossip-0.6-r1.ebuild,
  files/gossip-0.6-click.patch:
  Added a patch that will stop gossip from crashing when you tripple or
  quadruple click on the notification area icon
  See http://bugzilla.gnome.org/show_bug.cgi?id=128730

  07 Dec 2003; <spider@gentoo.org> gossip-0.6.ebuild:
  Bumping to stable x86

*gossip-0.6 (18 Nov 2003)

  18 Nov 2003; <spider@gentoo.org> gossip-0.6.ebuild:
  Updated build, fix for intltool-merge , updated deps

*gossip-0.5 (18 Aug 2003)

  18 Aug 2003; foser <foser@gentoo.org> gossip-0.5.ebuild :
  New version, updated deps

*gossip-0.4 (26 Jul 2003)

  26 Jul 2003; foser <foser@gentoo.org> ChangeLog, gossip-0.4.ebuild, metadata.xml :
  Initial commit
  A lightweight Jabber client for GNOME