@@ -1,13 +1,11 @@
-MD5 29facb1cf3eeca65f87d4df2d7fd7a82 ChangeLog 1950
-MD5 9e218ef0a7151e99dbae75082bfda4dd gossip-0.6-r1.ebuild 827
-MD5 b9b52f3cec5e9136ad7089656c1ac09c gossip-0.6.ebuild 786
-MD5 9a9ed8f43621c860f0323fcd365a2dbf metadata.xml 271
-MD5 80d91a4a3cfd80c7cf5648fb2704c4c6 gossip-0.7.ebuild 710
-MD5 3f263259204184ade7416d498d85c284 gossip-0.7.1-r1.ebuild 717
 MD5 63d525479892e4bc8cf25cf793e3a93d gossip-0.7.2.ebuild 833
-MD5 74c6a4b33f5bf9b5392c0f604cdbf55b files/digest-gossip-0.6 63
+MD5 b9b52f3cec5e9136ad7089656c1ac09c gossip-0.6.ebuild 786
+MD5 8e6671807170c90b4e68ce4f6aed7d6c gossip-0.7.4.ebuild 828
+MD5 d5503079eaf76ab1b711c11b35a7875d gossip-0.6-r1.ebuild 825
+MD5 abfe8d596eded47e5cb067799f5b365c ChangeLog 2065
+MD5 9a9ed8f43621c860f0323fcd365a2dbf metadata.xml 271
 MD5 74c6a4b33f5bf9b5392c0f604cdbf55b files/digest-gossip-0.6-r1 63
-MD5 c54dc353178590bded70cd6152c7cdc4 files/gossip-0.6-click.patch 659
-MD5 c50d24396819814ac7d30633b4c2eca3 files/digest-gossip-0.7 63
+MD5 74c6a4b33f5bf9b5392c0f604cdbf55b files/digest-gossip-0.6 63
 MD5 026b4965e022a1121bb4ea0aa7e62335 files/digest-gossip-0.7.2 65
-MD5 4a198989dbc6028edf5f4058b2d62862 files/digest-gossip-0.7.1-r1 65
+MD5 380ba273ba985435cd49ab18d2b22382 files/digest-gossip-0.7.4 65
+MD5 c54dc353178590bded70cd6152c7cdc4 files/gossip-0.6-click.patch 659
