@@ -1,1 +1,0 @@
-MD5 80fc97bad2fcf9e6ef0cb1ee59a03636 gossip-0.7.tar.bz2 745624
