@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/gossip-0.7.ebuild,v 1.1 2004/01/22 18:29:30 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/gossip-0.7.4.ebuild,v 1.1 2004/04/07 11:03:36 foser Exp $
 
 inherit gnome2
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://gossip.imendio.com/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~x86 ~sparc"
 IUSE=""
 
 RDEPEND=">=dev-libs/glib-2.0.3
@@ -17,13 +17,15 @@ RDEPEND=">=dev-libs/glib-2.0.3
 	>=gnome-base/libglade-2
 	>=gnome-base/gconf-1.2
 	>=dev-libs/libxml2-2.4.7
-	>=dev-libs/libxslt-1.0.0
+	>=dev-libs/libxslt-1
 	>=gnome-base/libgnomeui-2
-	>=net-libs/loudmouth-0.15"
+	>=net-libs/loudmouth-0.15.1"
 
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig
-	dev-util/intltool"
+	>=dev-util/intltool-0.29"
+
+# Disable dbus support by default considering it's experimental nature
+G2CONF="${G2CONF} --disable-dbus"
 
 DOCS="AUTHORS README COPYING ChangeLog INSTALL NEWS README"
-
